# numenera-chargen

./: .gitignore  Cargo.toml  README.md
data/: artifacts.toml  cyphers.toml  descriptors.toml  discoveries.toml  equipment.toml  foci.toml  oddities.toml  species.toml  types.toml
output/: Anja_2025-10-23_10-11-30.json  Finn_Thornblade_2025-10-22_11-47-40.json
src/: lib.rs  main.rs
src/character/: builder.rs  mod.rs  sheet.rs  stats.rs
src/data/: loader.rs  mod.rs  models.rs
src/generator/: interactive.rs  mod.rs  random.rs
src/output/: markdown.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/screens/: ability_select.rs  artifact_select.rs  character_loader.rs  character_preview.rs  cypher_select.rs  descriptor_select.rs  edit_menu.rs  edit_stats.rs  equipment_shop.rs  focus_select.rs  gender_select.rs  main_menu.rs  mod.rs  name_input.rs  oddity_select.rs  stat_allocations.rs  type_select.rs
tests/: character_tests.rs  data_tests.rs  generation_tests.rs  integration_test.rs  toml_tests.rs
