[package]
name = "numenera-chargen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
ratatui = "0.28"
crossterm = "0.28"
chrono = "0.4"

[dev-dependencies]